--- a/TombEngine/TombEngine.vcxproj
+++ b/TombEngine/TombEngine.vcxproj
@@ -596,7 +596,7 @@ xcopy /Y "$(SolutionDir)Libs\zlib\x64\*.dll" "$(TargetDir)"</Command>
     <ClInclude Include="Objects\TR4\Entity\tr4_small_scorpion.h" />
     <ClInclude Include="Objects\TR4\Entity\tr4_sphinx.h" />
     <ClInclude Include="Objects\TR4\Entity\tr4_troops.h" />
-    <ClInclude Include="Objects\TR4\Entity\tr4_von_croy.h" />
+    <ClInclude Include="Objects\TR4\Entity\VonCroy.h" />
     <ClInclude Include="Objects\TR4\Entity\tr4_wild_boar.h" />
     <ClInclude Include="Objects\TR4\Floor\tr4_burningfloor.h" />
     <ClInclude Include="Objects\TR4\Object\WraithTrap.h" />
@@ -1095,7 +1095,7 @@ xcopy /Y "$(SolutionDir)Libs\zlib\x64\*.dll" "$(TargetDir)"</Command>
     <ClCompile Include="Objects\TR4\Entity\tr4_small_scorpion.cpp" />
     <ClCompile Include="Objects\TR4\Entity\tr4_sphinx.cpp" />
     <ClCompile Include="Objects\TR4\Entity\tr4_troops.cpp" />
-    <ClCompile Include="Objects\TR4\Entity\tr4_von_croy.cpp" />
+    <ClCompile Include="Objects\TR4\Entity\VonCroy.cpp" />
     <ClCompile Include="Objects\TR4\Entity\tr4_wild_boar.cpp" />
     <ClCompile Include="Objects\TR4\Entity\Wraith.cpp" />
     <ClCompile Include="Objects\TR4\Floor\tr4_burningfloor.cpp" />
