--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: Bug report
-description: Create a report to help us improve
-title: "[ bug Report ]"
+description: Create a report to help the development team understand and replicate the issue you are facing.
+title: "[ Bug Report ]"
 labels: Awaiting Triage
 
 body:
@@ -16,10 +16,9 @@ body:
     description: |
       Please select the TombEngine Version from the dropdown list.
     options:
+      - v1.5 (development build)
       - v1.4
       - v1.3
-      - v1.2
-      - v1.1
   validations:
     required: true
 
@@ -29,6 +28,7 @@ body:
     description: |
       Please select the Tomb Editor version used from the dropdown list.
     options:
+      - v1.7.2 (development build)
       - v1.7.1
       - v1.7.0
       - v1.6.9
@@ -60,16 +60,6 @@ body:
 
 - type: textarea
   attributes:
-    label: Expected Behaviour
-    description: |
-      A clear and concise description of what you expected to happen.
-    placeholder: |
-      A description of what should happen here.
-  validations:
-    required: true
-
-- type: textarea
-  attributes:
     label: Screenshots
     description: |
       Please check this box if you have provided screenshots or any other media for this issue
@@ -80,14 +70,14 @@ body:
   validations:
     required: true
 
-- type: textarea
+- type: checkboxes
   attributes:
     label: Additional Content
     description: |
       Add any other context about the problem here. 
 
       * Are you testing an build of a TombEngine that has not yet been released? If so please give some context.
-      *  Did you get any asset from the TombEngine website that has presented a bug? 
+      * Did you get any asset from the TombEngine website that has presented a bug? 
     placeholder: |
       A description of any additional content here.
   validations:
