--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: Bug report
-description: Create a report to help the development team understand and replicate the issue you are facing.
-title: "[ Bug Report ]"
+description: Create a report to help us understand and diagnose your issue. Your contribution is welcomed and valued!
+title: "[ bug Report ]"
 labels: Awaiting Triage
 
 body:
@@ -18,7 +18,6 @@ body:
     options:
       - v1.5 (development build)
       - v1.4
-      - v1.3
   validations:
     required: true
 
@@ -28,11 +27,9 @@ body:
     description: |
       Please select the Tomb Editor version used from the dropdown list.
     options:
-      - v1.7.2 (development build)
+      - v1.7.2 (development version)
       - v1.7.1
       - v1.7.0
-      - v1.6.9
-      - v1.6.8
   validations:
     required: true
 
@@ -60,24 +57,22 @@ body:
 
 - type: textarea
   attributes:
-    label: Screenshots
+    label: Expected Behaviour
     description: |
-      Please check this box if you have provided screenshots or any other media for this issue
-      **note** If you do not provide screenshots or anything else, it may be hard for devs to investigate
-      provide a link to your screenshot here or simply drag and drop your screenshot into this textbox
+      A clear and concise description of what you expected to happen.
     placeholder: |
-      A description of any additional content here.
+      A description of what should happen here.
   validations:
     required: true
 
-- type: checkboxes
+- type: textarea
   attributes:
     label: Additional Content
     description: |
       Add any other context about the problem here. 
 
       * Are you testing an build of a TombEngine that has not yet been released? If so please give some context.
-      * Did you get any asset from the TombEngine website that has presented a bug? 
+      *  Did you get any asset from the TombEngine website that has presented a bug? 
     placeholder: |
       A description of any additional content here.
   validations:
