--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -16,7 +16,8 @@ body:
     description: |
       Please select the TombEngine Version from the dropdown list.
     options:
-      - v1.5 (development build)
+      - Development Build
+      - v1.5.0.2 (Latest Release)
       - v1.4
   validations:
     required: true
@@ -27,7 +28,8 @@ body:
     description: |
       Please select the Tomb Editor version used from the dropdown list.
     options:
-      - v1.7.2 (development version)
+      - Development Build
+      - v1.7.2
       - v1.7.1
       - v1.7.0
   validations:
