--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -16,9 +16,8 @@ body:
     description: |
       Please select the TombEngine Version from the dropdown list.
     options:
-      - Development Build
-      - v1.7 (Latest release)
-      - v1.6
+      - v1.5 (development build)
+      - v1.4
   validations:
     required: true
 
@@ -28,9 +27,7 @@ body:
     description: |
       Please select the Tomb Editor version used from the dropdown list.
     options:
-      - Development Build
-      - v1.7.3 (Latest release)
-      - v1.7.2
+      - v1.7.2 (development version)
       - v1.7.1
       - v1.7.0
   validations:
@@ -75,7 +72,7 @@ body:
       Add any other context about the problem here. 
 
       * Are you testing an build of a TombEngine that has not yet been released? If so please give some context.
-      * Did you get any asset from the TombEngine website that has presented a bug? 
+      *  Did you get any asset from the TombEngine website that has presented a bug? 
     placeholder: |
       A description of any additional content here.
   validations:
